# GtkMin

./: .gitignore  CMakeLists.txt
resources/: mini_app.glade  mini_app.gresource.xml  numeric_label.glade  scalar_display_template.glade  temp_composite.glade  two_button_popup.glade
resources/style/scss/: _mini_app_button.scss  _mini_app_colors.scss  _mini_app_window.scss  mini_app_style.scss
src/: comm.h  main.c  version.h.in
src/controllers/: app_ctrl.c  app_ctrl.h
src/models/: app_model.c  app_model.h  battery_indicator.c  battery_indicator.h  gtkdial.c  gtkdial.h  model_device.c  model_device.h  my_boxed_struct.c  my_boxed_struct.h  my_int.c  my_int.h  numeric_label.c  numeric_label.h  scalar_display.c  scalar_display.h  temp_composite.c  temp_composite.h  tictactoe.c  tictactoe.h  two_button_popup_overlay.c  two_button_popup_overlay.h
src/utils/: logging.c  logging.h  parse_args.c  parse_args.h  sys_interface.c  sys_interface.h
src/views/: css_styler.c  css_styler.h  root_child_main_content.c  root_child_main_content.h  root_child_msgout.c  root_child_msgout.h  root_window.c  root_window.h  ui_builder.c  ui_builder.h
